- Validação para construção de URL de consulta com as devidas alterações para CPF e CNPJ. - Inserção de um arquivo de run.py para teste e exemplo de uso da biblioteca. - Ajustado os imports e estrutura de prints para trabalhar com Python3.x - Adicionado variável de controle para Homologação e produção. - adicionado estrutura de validação de URL para homologação e produção - ignorados blocos que não eram reconhecidos no retorno - adicionado gitigonre - adicionado requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
+asttokens==2.2.1
+autopep8==2.0.1
+backcall==0.2.0
+certifi==2022.12.7
+chardet==3.0.4
+coverage==3.7.1
 coveralls==0.5
-six==1.9.0
+decorator==5.1.1
+docopt==0.6.2
+executing==1.2.0
+idna==2.8
+ipython==8.7.0
+jedi==0.18.2
+matplotlib-inline==0.1.6
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.36
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+pycodestyle==2.10.0
+Pygments==2.13.0
 pytest==2.6.4
+PyYAML==6.0
 requests==2.22.0
+six==1.16.0
+stack-data==0.6.2
+tomli==2.0.1
+traitlets==5.8.0
+urllib3==1.25.11
+wcwidth==0.2.5
